Import now uses a <Dropdown> once again

--- a/MemoryMosaic/Pages/Import/Import.razor
+++ b/MemoryMosaic/Pages/Import/Import.razor
@@ -80,7 +80,7 @@
 		
 		<IconButton Icon="more_vert" OnClick="@(() => moreSettings.Toggle())"/>
 		
-		<div id="dropdown" style="@moreSettings.Style">
+		<Dropdown @ref="@moreSettings" Positioning="top: 64px; right: 40px">
 			<div>
 				<span>Min Year</span>
 				<IntInput @bind-Input="@MinYear" HideSpinner="true" Placeholder="Min Year" Style="width: 40px; margin-left: 8px"/>
@@ -104,7 +104,7 @@
 			
 			<Checkbox @bind-Input="@displayWarnings" Label="Display Warnings" Title="Warnings are files with the same name but in a different folder."/>
 			<Checkbox @bind-Input="@onlyDisplayErrors" Label="Only Display Errors" Title="Errors occur when 2 or more import items would end up in the same destination folder, or when there's already a library item with the same name in that folder."/>
-		</div>
+		</Dropdown>
 	</div>
 </header>
 
