Fix long collection names causing weird behavior in CS and FV

--- a/MemoryMosaic/Styles/Components/Modal/CollectionSelector.scss
+++ b/MemoryMosaic/Styles/Components/Modal/CollectionSelector.scss
@@ -78,7 +78,16 @@
 					@include flex-row;
 					pointer-events: none;
 
-					span { margin-left: 6px; }
+					span {
+						margin-left: 6px;
+
+						&:nth-of-type(2) {
+							max-width: 370px;
+							overflow: hidden;
+							text-overflow: ellipsis;
+							white-space: nowrap;
+						}
+					}
 				}
 			}
 		}
