--- a/MemoryMosaic/Styles/Components/FullscreenViewer/FullscreenViewer.scss
+++ b/MemoryMosaic/Styles/Components/FullscreenViewer/FullscreenViewer.scss
@@ -174,7 +174,13 @@
 						}
 					}
 					
-					> span { margin-left: 8px; }
+					> span {
+						margin-left: 8px;
+						max-width: 260px;
+						overflow: hidden;
+						text-overflow: ellipsis;
+						white-space: nowrap;
+					}
 				}
 			}
 		}
