--- a/MemoryMosaic/Styles/Pages/Maintenance/UntrackedFiles.scss
+++ b/MemoryMosaic/Styles/Pages/Maintenance/UntrackedFiles.scss
@@ -26,11 +26,9 @@ main {
 		}
 
 		> span {
+			@include ellipsis;
 			margin-left: 10px;
 			width: 300px;
-			overflow: hidden;
-			white-space: nowrap;
-			text-overflow: ellipsis;
 		}
 
 		> .iconBtn { margin-left: 4px; }
