Thumbnails in Import are now generated asynchronously
While this doesn't technically make it load import items in faster, it does get the user looking at something besides a loading screen. Speaking of, also removed the loading screen.

--- a/MemoryMosaic/Pages/Import/Import.razor
+++ b/MemoryMosaic/Pages/Import/Import.razor
@@ -5,12 +5,6 @@
 <link href="css/Pages/Import.css" rel="stylesheet"/>
 <link href="css/Components/ItemDisplay.css" rel="stylesheet"/>
 
-@if (pageLoading)
-{
-	<h1>Loading Import...</h1>
-	return;
-}
-
 @if (importItems.Count == 0)
 {
 	<h1>No supported files found in mm_import.</h1>
@@ -51,7 +45,7 @@
 		</div>
 	</div>
 
-	@if (ErrorAmount == 0 && !EditingFilename)
+	@if (!thumbnailsLoading && ErrorAmount == 0 && !EditingFilename)
 	{
 		<IconTextButton Icon="library_add" Text="@AddBtnText" OnClick="@AddItems"/>
 	}
