--- a/MemoryMosaic/Shared/Modal/FullscreenViewer/FullscreenViewer.razor
+++ b/MemoryMosaic/Shared/Modal/FullscreenViewer/FullscreenViewer.razor
@@ -220,7 +220,7 @@
 
 			newFilename = CurrentLi != null ? CurrentLi.FilenameWithoutExtension : CurrentIi!.NewFilename;
 			
-			ext = Path.GetExtension(Current.Path);
+			ext = P.GetExtension(Current.Path);
 			
 			StateHasChanged();
 
