--- a/MemoryMosaic/Styles/Shared.scss
+++ b/MemoryMosaic/Styles/Shared.scss
@@ -34,9 +34,7 @@ h1 {
 input[type="range"] {
 	accent-color: $AccentColor; 
 	
-	&:focus-visible {
-		outline: 1px solid $AccentColor;
-	}
+	&:focus-visible { outline: 1px solid $AccentColor; }
 }
 
 input[type="date"], input[type="datetime-local"] {
@@ -54,10 +52,16 @@ input[type="date"], input[type="datetime-local"] {
 	&::-webkit-datetime-edit-day-field:focus { background-color: $AccentColor; }
 	&::-webkit-datetime-edit-month-field:focus { background-color: $AccentColor; }
 	&::-webkit-datetime-edit-year-field:focus { background-color: $AccentColor; }
+	&::-webkit-datetime-edit-hour-field:focus { background-color: $AccentColor; }
+	&::-webkit-datetime-edit-minute-field:focus { background-color: $AccentColor; }
+	&::-webkit-datetime-edit-second-field:focus { background-color: $AccentColor; }
+	&::-webkit-datetime-edit-ampm-field:focus { background-color: $AccentColor; }
 
 	&::-webkit-calendar-picker-indicator {
 		margin-left: -20px;
 		font-size: 16px;
+		
+		&:focus { background-color: $AccentColor; }
 	}
 }
 
@@ -83,6 +87,4 @@ select {
 	}
 }
 
-progress {
-	accent-color: $AccentColor;
-}
+progress { accent-color: $AccentColor; }
