--- a/MemoryMosaic/Styles/Pages/Collections.scss
+++ b/MemoryMosaic/Styles/Pages/Collections.scss
@@ -25,32 +25,31 @@ header {
 	}
 }
 
+//https://stackoverflow.com/a/67327241
 main {
 	@include main(90px, 165px);
 	@include available-width;
-	display: grid;
-	grid-gap: 20px;
+	margin-right: 24px;
 	
-	@media screen and (min-width: 600px) { grid-template-columns: repeat(2, 1fr); }
-	@media screen and (min-width: 850px) { grid-template-columns: repeat(3, 1fr); }
-	@media screen and (min-width: 1100px) { grid-template-columns: repeat(4, 1fr); }
-	@media screen and (min-width: 1300px) { grid-template-columns: repeat(5, 1fr); }
-	@media screen and (min-width: 1500px) { grid-template-columns: repeat(6, 1fr); }
+	display: grid;
+	grid-auto-flow: row;
+	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+	grid-template-rows: repeat(auto-fill, 1fr);
+	column-gap: 20px;
+	row-gap: 35px;
 
 	> a {
-		@include available-width;
-		position: relative;
-		display: flex;
-		flex-direction: column;
+		@include flex-col;
 
 		> div {
-			margin: 0;
-			padding: 0;
-			display: flex;
-			justify-content: center;
+			@include flex-justify-center;
 			overflow: hidden;
-			width: 200px;
-			height: 200px;
+			min-width: 200px;
+			min-height: 200px;
+			max-width: 225px;
+			max-height: 225px;
+			aspect-ratio: 1/1;
+			
 			background-color: $CoverBackground;
 			border-radius: 4px;
 		}
