Collections page now displays the amount of items in each collection

--- a/MemoryMosaic/Pages/Collections.razor
+++ b/MemoryMosaic/Pages/Collections.razor
@@ -35,6 +35,7 @@
                 }
             </div>
             <span>@collection.Name</span>
+            <span>@F.GetPluralized(collection.Count, "item")</span>
         </a>
     }
 </main>
