--- a/MemoryMosaic/Styles/Pages/Collections.scss
+++ b/MemoryMosaic/Styles/Pages/Collections.scss
@@ -30,7 +30,7 @@ main {
 	@include main(90px, 165px);
 	@include available-width;
 	margin-right: 24px;
-	
+
 	display: grid;
 	grid-auto-flow: row;
 	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -49,15 +49,21 @@ main {
 			max-width: 225px;
 			max-height: 225px;
 			aspect-ratio: 1/1;
-			
+
 			background-color: $CoverBackground;
 			border-radius: 4px;
 		}
 
-		> span {
+		> span:first-of-type {
 			@include ellipsis;
 			width: 200px;
 			margin-top: 8px;
+			margin-bottom: 4px;
+		}
+
+		> span:nth-of-type(2) {
+			color: gray;
+			font-size: 14px;
 		}
 	}
 }
