--- a/MemoryMosaic/Pages/Collections.razor
+++ b/MemoryMosaic/Pages/Collections.razor
@@ -15,7 +15,7 @@
         <Checkbox @bind-Input="@showDateRanges" Label="Show Date Ranges" OnChange="@StateHasChanged"/>
     </div>
 
-    <IconTextButton ID="sortBtn" Icon="sort" Text="@sortBtnText" OnClick="@(() => dropdown.Toggle())"/>
+    <IconTextButton ID="sortBtn" Icon="sort" Text="@SortBtnText" OnClick="@(() => dropdown.Toggle())"/>
 </header>
 
 <Dropdown @ref="@dropdown" Positioning="top: 64px; right: 100px">
@@ -23,6 +23,10 @@
     <DropdownButton Icon="check" Text="Title Reversed" OnClick="@(() => ChangeOrder(CollectionsSortMode.TitleReversed))" IconStyle="@(sortMode == CollectionsSortMode.TitleReversed ? "color: #0080ff" : "visibility: hidden")" TextColor="@(sortMode == CollectionsSortMode.TitleReversed ? "#0080ff" : "white")"/>
     <DropdownButton Icon="check" Text="Last Modified" OnClick="@(() => ChangeOrder(CollectionsSortMode.LastModified))" IconStyle="@(sortMode == CollectionsSortMode.LastModified ? "color: #0080ff" : "visibility: hidden")" TextColor="@(sortMode == CollectionsSortMode.LastModified ? "#0080ff" : "white")"/>
     <DropdownButton Icon="check" Text="Last Modified Reversed" OnClick="@(() => ChangeOrder(CollectionsSortMode.LastModifiedReversed))" IconStyle="@(sortMode == CollectionsSortMode.LastModifiedReversed ? "color: #0080ff" : "visibility: hidden")" TextColor="@(sortMode == CollectionsSortMode.LastModifiedReversed ? "#0080ff" : "white")"/>
+    <DropdownButton Icon="check" Text="Highest Count" OnClick="@(() => ChangeOrder(CollectionsSortMode.HighestCount))" IconStyle="@(sortMode == CollectionsSortMode.HighestCount ? "color: #0080ff" : "visibility: hidden")" TextColor="@(sortMode == CollectionsSortMode.HighestCount ? "#0080ff" : "white")"/>
+    <DropdownButton Icon="check" Text="Lowest Count" OnClick="@(() => ChangeOrder(CollectionsSortMode.LowestCount))" IconStyle="@(sortMode == CollectionsSortMode.LowestCount ? "color: #0080ff" : "visibility: hidden")" TextColor="@(sortMode == CollectionsSortMode.LowestCount ? "#0080ff" : "white")"/>
+    <DropdownButton Icon="check" Text="Newest Item First" OnClick="@(() => ChangeOrder(CollectionsSortMode.NewestItemFirst))" IconStyle="@(sortMode == CollectionsSortMode.NewestItemFirst ? "color: #0080ff" : "visibility: hidden")" TextColor="@(sortMode == CollectionsSortMode.NewestItemFirst ? "#0080ff" : "white")"/>
+    <DropdownButton Icon="check" Text="Oldest Item First" OnClick="@(() => ChangeOrder(CollectionsSortMode.OldestItemFirst))" IconStyle="@(sortMode == CollectionsSortMode.OldestItemFirst ? "color: #0080ff" : "visibility: hidden")" TextColor="@(sortMode == CollectionsSortMode.OldestItemFirst ? "#0080ff" : "white")"/>
 </Dropdown>
 
 <main>
@@ -56,15 +60,10 @@
 
     private Dropdown dropdown = null!;
     
-    private string sortBtnText = "";
     private static CollectionsSortMode sortMode = CollectionsSortMode.LastModified;
     private static bool showAlbums = true, showFolders, showReadonly = true, showDateRanges = true;
 
-    protected override void OnInitialized()
-    {
-        GetCollections();
-        SetSortBtnText();
-    }
+    protected override void OnInitialized() => GetCollections();
 
     private void GetCollections()
     {
@@ -72,23 +71,23 @@
         StateHasChanged();
     }
 
-    private void SetSortBtnText()
+    private static string SortBtnText => sortMode switch
     {
-        sortBtnText = sortMode switch
-        {
-            CollectionsSortMode.Title => "Collection Title",
-            CollectionsSortMode.TitleReversed => "Title Reversed",
-            CollectionsSortMode.LastModified => "Last Modified",
-            CollectionsSortMode.LastModifiedReversed => "Last Modified Reversed",
-            _ => "Collection Title"
-        };
-    }
+        CollectionsSortMode.Title => "Collection Title",
+        CollectionsSortMode.TitleReversed => "Title Reversed",
+        CollectionsSortMode.LastModified => "Last Modified",
+        CollectionsSortMode.LastModifiedReversed => "Last Modified Reversed",
+        CollectionsSortMode.HighestCount => "Highest Count",
+        CollectionsSortMode.LowestCount => "Lowest Count",
+        CollectionsSortMode.NewestItemFirst => "Newest Item First",
+        CollectionsSortMode.OldestItemFirst => "Oldest Item First",
+        _ => "Collection Title"
+    };
 
     private void ChangeOrder(CollectionsSortMode newMode)
     {
         sortMode = newMode;
         GetCollections();
-        SetSortBtnText();
         dropdown.Disable();
     }
 }
