--- a/MemoryMosaic/Pages/LCV/CollectionView.razor
+++ b/MemoryMosaic/Pages/LCV/CollectionView.razor
@@ -1,4 +1,4 @@
-@page "/collection-view/{CollectionID}"
+@page "/collection/{CollectionID}"
 @inject NavigationManager navigationManager
 
 @if (collection == null) { return; }
