--- a/MemoryMosaic/Shared/Modal/FullscreenViewer/FullscreenViewer.razor
+++ b/MemoryMosaic/Shared/Modal/FullscreenViewer/FullscreenViewer.razor
@@ -115,7 +115,7 @@
 				<div>
 					@foreach (Collection c in collectionsContaining)
 					{
-						<a href="/collection-view/@c.Id">
+						<a href="/collection/@c.Id">
 							<div class="cover">
 								@if (!String.IsNullOrWhiteSpace(c.Cover))
 								{
