--- a/MemoryMosaic/Styles/Shared.scss
+++ b/MemoryMosaic/Styles/Shared.scss
@@ -69,6 +69,7 @@ textarea {
 	border: 1px solid white;
 	background-color: black;
 	font-size: 16px;
+	padding: 4px;
 
 	&:focus {
 		border: 1px solid $AccentColor;
