--- a/MemoryMosaic/Shared/Modal/CollectionSelector.razor
+++ b/MemoryMosaic/Shared/Modal/CollectionSelector.razor
@@ -108,6 +108,7 @@
     private void CloseBtnClick()
     {
         Disable();
+        ClearSelected();
         ClearCollectionSelection();
     }
 
