Thumbnails now have to be hovered for 150 ms before preloading

--- a/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
@@ -186,6 +186,9 @@ Items can be selected, and depending on the page, different options may be appli
 	[Parameter]
 	public bool SortDesc { get; set; } = true;
 	
+	public bool HoveringThumbnail { get; set; }
+	public DateTime HoverStartTime { get; set; }
+	
 	public List<LibraryItem> Content { get; private set; } = new(600);
 	
 	public CtrlGInput CtrlGInput { get; private set; } = new();
